# chaos-ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
scenes/: scene.crtscene
src/: main.cpp
src/01.Intro/src/: main.cpp
src/core/: AABBox.h  AccelerationTree.cpp  AccelerationTree.h  Camera.cpp  Camera.h  Defines.h  Light.h  Material.cpp  Material.h  Matrix3x3.cpp  Matrix3x3.h  PPMImage.h  Parser.cpp  Parser.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Statistics.cpp  Statistics.h  TaskManager.h  ThreadPool.h  Timer.h  Triangle.cpp  Triangle.h  Utils.h  Vector3.h
src/external_libs/: CMakeLists.txt
src/external_libs/rapidjson/: CMakeLists.txt  allocators.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
src/external_libs/rapidjson/error/: en.h  error.h
src/external_libs/rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
src/external_libs/rapidjson/msinttypes/: inttypes.h  stdint.h
src/external_libs/stb/: CMakeLists.txt
src/utils/: Camera.h  Constants.h  Matrix3x3.h  PPMImage.h  Ray.h  TaskManager.h  Timer.h  Triangle.h  Utils.h  Vector3.h
